--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.linting.pylintEnabled": false,
-    "python.formatting.provider": "yapf",
+    "python.formatting.provider": "autopep8",
     "git.ignoreLimitWarning": true
 }
